--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -1071,6 +1071,8 @@
     <string name="delete_pairing">Șterge asocierea</string>
     <string name="pairing_information">Informații despre asociere</string>
     <string name="refreh_status">Reîmprospătare stare</string>
+    <string name="key_scale_insulin_activity">key_scale_insulin_activity</string>
+    <string name="scale_insulin_activity">Graph scale insulin activity [U/min]</string>
     <plurals name="objective_days">
         <item quantity="one">%1$d zi</item>
         <item quantity="few">%1$d zi</item>
