--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1343,18 +1343,31 @@
     <string name="key_hypoppred_bglow">hypoppred_bglow</string>
     <string name="hypoppred_settings">Detection and prevention of impending hypo\'s</string>
     <string name="hypoppred_24hwindow_title">Set time frame</string>
-    <string name="hypoppred_24hwindow_summary">As a default auto TT\'s can be started at any time of the day. This can be limited to a specific period by setting a time frame.</string>
+    <string name="hypoppred_24hwindow_summary">Default hypo prevention is active all day. This can be limited to a specific period by setting a time frame.</string>
     <string name="hypoppred_window_from">Start:</string>
     <string name="key_hypoppred_24hwindow">hypoppred_24hwindow</string>
     <string name="hypoppred_window_from_summary">Start of timeframe</string>
     <string name="hypoppred_window_to">End:</string>
     <string name="hypoppred_window_to_summary">End of timeframe</string>
     <string name="key_hypoppred_threshold_bg">hypoppred_threshold_bg</string>
-    <string name="hypoppred_threshold_bg">Threshold BG</string>
-    <string name="hypoppred_threshold_bg_summary">When BG drops below this threshold an hypo TT is started.</string>
+    <string name="hypoppred_threshold_bg">Always start a hypo TT when BG drops below this level.</string>
+    <string name="hypoppred_threshold_bg_summary">Always start a hypo TT when BG drops below this level.</string>
     <string name="key_hypoppred_window_to">hypoppred_window_to</string>
     <string name="key_hypoppred_window_from">hypoppred_window_from</string>
     <string name="hypo_detection">Hypo detection</string>
+    <string name="key_hypoppred_fitter_steps">hypoppred_fitter_steps</string>
+    <string name="key_hypoppred_fitter_weight">hypoppred_fitter_weight</string>
+    <string name="key_hypoppred_alertlevel">hypoppred_alertlevel</string>
+    <string name="hypoppred_threshold_alert_summary">Generate an alert when BG value drops below this level</string>
+    <string name="hypoppred_threshold_alert">Generate an alert when BG value drops below this level</string>
+    <string name="key_hypoppred_threshold_alert">hypoppred_threshold_alert</string>
+    <string name="hypoppred_algorithm">Prediction algorithm</string>
+    <string name="hypoppred_algorithm_steps_summary">Number of previous BG readings to base prediction on</string>
+    <string name="key_hypoppred_algorithm_steps">hypoppred_algorithm_steps</string>
+    <string name="hypoppred_algorithm_steps">Number of previous BG readings to base prediction on</string>
+    <string name="hypoppred_algorithm_weight_summary">Older BG readings weigh less by this factor</string>
+    <string name="hypoppred_algorithm_weight">Older BG readings weigh less by this factor</string>
+    <string name="key_hypoppred_algorithm_weight">hypoppred_algorithm_weight</string>
 
     <plurals name="objective_days">
         <item quantity="one">%1$d day</item>
