--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1373,6 +1373,10 @@
     <string name="hypoppred_algorithm_summary">Default the algorithm uses only the future BG values that AndroidAPS calculates.</string>
     <string name="key_scale_insulin_activity">scale_insulin_activity</string>
     <string name="scale_insulin_activity">Scal insulin activity on overview charts</string>
+    <string name="key_hypoppred_algorithm_horizon">hypoppred_algorithm_horizon</string>
+    <string name="hypoppred_algorithm_horizon">Size hypo detection window (min)</string>
+    <string name="hypoppred_algorithm_horizon_summary">Size hypo detection window (min)</string>
+    <string name="hypopred_continued">\" (continued)\"</string>
 
     <plurals name="objective_days">
         <item quantity="one">%1$d day</item>
