--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1342,7 +1342,7 @@
     <string name="hypoppred">Early hypo detection and prevention</string>
     <string name="hypoppred_settings">Detection and prevention of impending hypo\'s</string>
     <string name="hypoppred_24hwindow_title">Set time frame</string>
-    <string name="hypoppred_24hwindow_summary">Default hypo prevention is active all day. This can be limited to a specific period by setting a time frame.</string>
+    <string name="hypoppred_24hwindow_summary">Default hypo prevention is active all day. This can be limited to a specific period by setting a time frame. NOTE: this setting only applies to automatic hypo prevention, it does not apply to hypo alert warnings. These are given all day round.</string>
     <string name="hypoppred_window_from">Start:</string>
     <string name="key_hypoppred_24hwindow">hypoppred_24hwindow</string>
     <string name="hypoppred_window_from_summary">Start of timeframe</string>
@@ -1357,8 +1357,8 @@
     <string name="key_hypoppred_fitter_steps">hypoppred_fitter_steps</string>
     <string name="key_hypoppred_fitter_weight">hypoppred_fitter_weight</string>
     <string name="key_hypoppred_alertlevel">hypoppred_alertlevel</string>
-    <string name="hypoppred_threshold_alert_summary">Sound alarm when BG value drops below this level</string>
-    <string name="hypoppred_threshold_alert">Sound alarm when BG value drops below this level</string>
+    <string name="hypoppred_threshold_alert_summary">Give alert when BG value drops below this level</string>
+    <string name="hypoppred_threshold_alert">Give alert when BG value drops below this level</string>
     <string name="key_hypoppred_threshold_alert">hypoppred_threshold_alert</string>
     <string name="hypoppred_algorithm">Prediction algorithm</string>
     <string name="hypoppred_algorithm_steps_summary">Number of previous BG readings to base prediction on</string>
@@ -1379,10 +1379,37 @@
     <string name="key_hypoppred_waittime">hypoppred_waittime</string>
     <string name="hypoppred_waittime_summary">Time TT remains running after hypo prediction has ended (mins)</string>
     <string name="hypoppred_waittime">Time TT continues running when hypo no longer detected (mins)</string>
-    <string name="hypoppred_alert_msg">Hypo in %1$d mins, advice %2$d gram carbs</string>
+    <string name="hypoppred_alert_msg">Hypo in %1$d mins</string>
     <string name="hypoppred_TT_bg_summary">BG level for hypo TT</string>
     <string name="hypoppred_TT_bg">BG level for hypo TT</string>
     <string name="key_hypoppred_TT_bg">hypoppred_TT_bg</string>
+    <string name="hypoppred_alert_settings">Alert on (imminent) hypo</string>
+    <string name="hypoppred_alert_horizon_summary">Alert on hypo within (mins)</string>
+    <string name="key_hypoppred_alert_horizon">hypoppred_alert_horizon</string>
+    <string name="hypoppred_alert_horizon">Alert on hypo within (mins)</string>
+    <string name="hypoppred_alert_msg_carbs">, advice %1$d gram carbs</string>
+    <string name="hypoppred_alert_msg_now">Hypo in progress</string>
+    <string name="droptarget">Drop target when BG stable</string>
+    <string name="droptarget_shortname">DTBG</string>
+    <string name="description_droptarget">Drops BG to a predefined level when BG has been stable for a time, by starting a TT. Cancels TT when BG starts no longer stable.</string>
+    <string name="stable_bg">Stable BG</string>
+    <string name="droptarget_settings">Lowering of target BG when BG is stable</string>
+    <string name="key_droptarget_24hwindow">droptarget_24hwindow</string>
+    <string name="droptarget_24hwindow_title">Set time frame</string>
+    <string name="droptarget_24hwindow_summary">Default target will always be dropped when BG is stable. This can be limited to a specific time period by setting a time frame.</string>
+    <string name="key_droptarget_window_to">droptarget_window_to</string>
+    <string name="droptarget_window_to">End:</string>
+    <string name="droptarget_window_to_summary">End pf timeframe</string>
+    <string name="key_droptarget_window_from">droptarget_window_from</string>
+    <string name="droptarget_window_from">Start:</string>
+    <string name="droptarget_window_from_summary">Start of timeframe</string>
+    <string name="key_droptarget_TT_bg">droptarget_TT_bg</string>
+    <string name="droptarget_TT_bg">BG level for TT</string>
+    <string name="droptarget_TT_bg_summary">key_droptarget_TT_bg</string>
+    <string name="key_droptarget_waittime">droptarget_waittime</string>
+    <string name="droptarget_waittime_summary">Time TT runs after stable BG ends (mins)</string>
+    <string name="droptarget_waittime">Time TT runs after stable BG ends (mins)</string>
+    <string name="view_log">View log</string>
 
     <plurals name="objective_days">
         <item quantity="one">%1$d day</item>
