--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1417,6 +1417,7 @@
     <string name="hypoppred_aaps_summary"><![CDATA[The AAPS predictions (IOB, COB,...) are used to predict lows & hypo\'s]]></string>
     <string name="key_hypoppred_units">hypopred_units</string>
     <string name="key_droptarget_units">droptarget_units</string>
+    <string name="hypopred_corr_note">Hypo correction</string>
     <string-array name="logcat_spinner">
         <item>Verbose</item>
         <item>Debug</item>
