--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1418,6 +1418,10 @@
     <string name="key_hypoppred_units">hypopred_units</string>
     <string name="key_droptarget_units">droptarget_units</string>
     <string name="hypopred_corr_note">Hypo correction</string>
+
+    <string name="hgd_provider">HistoryCollector</string>
+    <string name="nav_historyviewer">History viewer</string>
+
     <string-array name="logcat_spinner">
         <item>Verbose</item>
         <item>Debug</item>
