--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1339,10 +1339,10 @@
     <string name="formatinsulinunits">%1$.2fU</string>
     <string name="description_hypoppred">Tries to detect impending hypo\'s and take corrective measures (start hypo TT) to prevent them.</string>
     <string name="hypoppred_shortname">hpp</string>
-    <string name="hypoppred">Early hypo detection and prevention</string>
-    <string name="hypoppred_settings">Detection and prevention of impending hypo\'s</string>
+    <string name="hypoppred">Early LOW detection and prevention</string>
+    <string name="hypoppred_settings">Detection and prevention of impending LOW\'s</string>
     <string name="hypoppred_24hwindow_title">Set time frame</string>
-    <string name="hypoppred_24hwindow_summary">Default hypo prevention is active all day. This can be limited to a specific period by setting a time frame. NOTE: this setting only applies to automatic hypo prevention, it does not apply to hypo alert warnings. These are given all day round.</string>
+    <string name="hypoppred_24hwindow_summary">Default LOW prevention is active all day. This can be limited to a specific period by setting a time frame. NOTE: this setting only applies to automatic LOW prevention, it does not apply to hypo alert warnings. These are given all day round.</string>
     <string name="hypoppred_window_from">Start:</string>
     <string name="key_hypoppred_24hwindow">hypoppred_24hwindow</string>
     <string name="hypoppred_window_from_summary">Start of timeframe</string>
@@ -1357,8 +1357,8 @@
     <string name="key_hypoppred_fitter_steps">hypoppred_fitter_steps</string>
     <string name="key_hypoppred_fitter_weight">hypoppred_fitter_weight</string>
     <string name="key_hypoppred_alertlevel">hypoppred_alertlevel</string>
-    <string name="hypoppred_threshold_alert_summary">Give alert when BG value drops below this level</string>
-    <string name="hypoppred_threshold_alert">Give alert when BG value drops below this level</string>
+    <string name="hypoppred_threshold_alert_summary">Give hypo alert when BG value drops below this level</string>
+    <string name="hypoppred_threshold_alert">Give hypo alert when BG value drops below this level</string>
     <string name="key_hypoppred_threshold_alert">hypoppred_threshold_alert</string>
     <string name="hypoppred_algorithm">Algorithms</string>
     <string name="hypoppred_algorithm_steps_summary">Number of previous BG readings to base prediction on</string>
@@ -1373,21 +1373,21 @@
     <string name="key_scale_insulin_activity">scale_insulin_activity</string>
     <string name="scale_insulin_activity">Scale of insulin activity on overview charts</string>
     <string name="key_hypoppred_horizon">hypoppred_algorithm_horizon</string>
-    <string name="hypoppred_horizon">How far to look in the future for a hypo (min)</string>
-    <string name="hypoppred_horizon_summary">Size hypo detection window (min)</string>
+    <string name="hypoppred_horizon">How far to look in the future for a LOW (min)</string>
+    <string name="hypoppred_horizon_summary">Size LOW detection window (min)</string>
     <string name="hypopred_continued"> (continued)</string>
     <string name="key_hypoppred_waittime">hypoppred_waittime</string>
     <string name="hypoppred_waittime_summary">Time TT remains running after hypo prediction has ended (mins)</string>
-    <string name="hypoppred_waittime">Time TT continues running when hypo no longer detected (mins)</string>
+    <string name="hypoppred_waittime">Time TT continues running when LOW no longer detected (mins)</string>
     <string name="hypoppred_alert_msg">Hypo in %1$d mins</string>
-    <string name="hypoppred_TT_bg_summary">BG level for hypo TT</string>
-    <string name="hypoppred_TT_bg">BG level for hypo TT</string>
+    <string name="hypoppred_TT_bg_summary">BG level for LOW TT</string>
+    <string name="hypoppred_TT_bg">BG level for LOW TT</string>
     <string name="key_hypoppred_TT_bg">hypoppred_TT_bg</string>
     <string name="hypoppred_alert_settings">Alert on (imminent) hypo</string>
     <string name="hypoppred_alert_horizon_summary">Alert on hypo within (mins)</string>
     <string name="key_hypoppred_alert_horizon">hypoppred_alert_horizon</string>
     <string name="hypoppred_alert_horizon">Alert on hypo within (mins)</string>
-    <string name="hypoppred_alert_msg_carbs">, advice %1$d dextro</string>
+    <string name="hypoppred_alert_msg_carbs">, advice %1$d dextro (+%2$d)</string>
     <string name="hypoppred_alert_msg_now">Hypo in progress</string>
     <string name="droptarget">Drop target when BG stable</string>
     <string name="droptarget_shortname">DTBG</string>
